NativeMethods.g.cs


        [DllImport(__DllName, EntryPoint = "__quiche_retry", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_retry(byte* scid, nuint scid_len, byte* dcid, nuint dcid_len, byte* new_scid, nuint new_scid_len, byte* token, nuint token_len, uint version, byte* @out, nuint out_len);

        [DllImport(__DllName, EntryPoint = "__quiche_version_is_supported", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_version_is_supported(uint version);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_new_with_tls", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern Conn* quiche_conn_new_with_tls(byte* scid, nuint scid_len, byte* odcid, nuint odcid_len, sockaddr* local, int local_len, sockaddr* peer, int peer_len, Config* config, void* ssl, [MarshalAs(UnmanagedType.U1)] bool is_server);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_set_keylog_path", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_set_keylog_path(Conn* conn, byte* path);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_set_session", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_set_session(Conn* conn, byte* buf, nuint buf_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_recv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_recv(Conn* conn, byte* buf, nuint buf_len, RecvInfo* info);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_send", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_send(Conn* conn, byte* @out, nuint out_len, SendInfo* out_info);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_send_quantum", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_send_quantum(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_send_on_path", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_send_on_path(Conn* conn, byte* @out, nuint out_len, sockaddr* from, int from_len, sockaddr* to, int to_len, SendInfo* out_info);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_send_quantum_on_path", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_send_quantum_on_path(Conn* conn, sockaddr* local_addr, int local_len, sockaddr* peer_addr, int peer_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_stream_recv", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_stream_recv(Conn* conn, ulong stream_id, byte* @out, nuint buf_len, bool* fin, ulong* out_error_code);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_stream_send", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_stream_send(Conn* conn, ulong stream_id, byte* buf, nuint buf_len, [MarshalAs(UnmanagedType.U1)] bool fin, ulong* out_error_code);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_stream_priority", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_stream_priority(Conn* conn, ulong stream_id, byte urgency, [MarshalAs(UnmanagedType.U1)] bool incremental);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_stream_shutdown", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_stream_shutdown(Conn* conn, ulong stream_id, int direction, ulong err);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_stream_capacity", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nint quiche_conn_stream_capacity(Conn* conn, ulong stream_id);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_stream_readable", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_stream_readable(Conn* conn, ulong stream_id);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_stream_readable_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long quiche_conn_stream_readable_next(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_stream_writable", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_stream_writable(Conn* conn, ulong stream_id, nuint len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_stream_writable_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern long quiche_conn_stream_writable_next(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_stream_finished", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_stream_finished(Conn* conn, ulong stream_id);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_readable", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern StreamIter* quiche_conn_readable(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_writable", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern StreamIter* quiche_conn_writable(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_max_send_udp_payload_size", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern nuint quiche_conn_max_send_udp_payload_size(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_timeout_as_nanos", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong quiche_conn_timeout_as_nanos(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_timeout_as_millis", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong quiche_conn_timeout_as_millis(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_on_timeout", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_on_timeout(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_close", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern int quiche_conn_close(Conn* conn, [MarshalAs(UnmanagedType.U1)] bool app, ulong err, byte* reason, nuint reason_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_trace_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_trace_id(Conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_source_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_source_id(Conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_source_ids", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ConnIdIter* quiche_conn_source_ids(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_connection_id_iter_next", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_connection_id_iter_next(ConnIdIter* iter, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "__quiche_connection_id_iter_free", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_connection_id_iter_free(ConnIdIter* iter);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_destination_id", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_destination_id(Conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_application_proto", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_application_proto(Conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_peer_cert", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_peer_cert(Conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_session", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern void quiche_conn_session(Conn* conn, byte** @out, nuint* out_len);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_is_established", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_established(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_is_resumed", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_resumed(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_is_in_early_data", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_in_early_data(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_is_readable", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_readable(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_is_draining", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_draining(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_peer_streams_left_bidi", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong quiche_conn_peer_streams_left_bidi(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_peer_streams_left_uni", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        internal static extern ulong quiche_conn_peer_streams_left_uni(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_is_closed", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_closed(Conn* conn);

        [DllImport(__DllName, EntryPoint = "__quiche_conn_is_timed_out", CallingConvention = CallingConvention.Cdecl, ExactSpelling = true)]
        [return: MarshalAs(UnmanagedType.U1)]
        internal static extern bool quiche_conn_is_timed_out(Conn* conn);
